# CPP-Image-Processing-Library

./: .gitignore  CMakeLists.txt  README.md
include/: Drawing.h  Image.h  Processing.h
src/: Drawing.cpp  Image.cpp  Processing.cpp  main.cpp
